[package]
name = "lewp"
version = "0.0.0"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Valid guaranteed HTML5 website generation suite. Truly runtime modularization."
homepage = "https://github.com/emirror-de/lewp-rs"
documentation = "https://github.com/emirror-de/lewp-rs"
repository = "https://github.com/emirror-de/lewp-rs"
readme = "README.md"
keywords = ["HTML5", "CSS", "JavaScript", "WASM", "website", "modules"]
categories = []

[dependencies]
serde = { version = "^1.0.130", features = ["derive"], optional = true }
log = "^0.4.14"
langtag = "^0.2.0"
html5ever = "^0.25.1"
markup5ever_rcdom = "^0.1.0"
charsets = "^0.2.0"
#toml = { version = "^0.5.8", optional = true }
