# This file is part of css. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/css/master/COPYRIGHT. No part of css, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of css. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/css/master/COPYRIGHT.


[package]
name = "lewp-css"
description = "Domain model for CSS Stylesheets. Allowing effective minification and transformations such as autoprefixing and removal by other crates. Updated and maintained version for lewp."
keywords = ["css"]
license = "MPL-2.0"
authors = ["Lewin Probst <info@emirror.de>", "Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://docs.rs/lewp-css/"
homepage = "https://github.com/emirror-de/lewp-rs"
repository = "https://github.com/emirror-de/lewp-rs.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "build.rs", "Cargo.toml", "rustfmt.toml"]
readme = "README.md"
publish = true
edition = "2021"
version = "0.2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
bitflags = "^1.3"
cssparser = "0.29"
either = "1.8.0"
phf = "0.11.1"
phf_macros = "0.11.1"
precomputed-hash = "^0.1"
quick-error = "1.2.3"
smallvec = "1.10.0"
servo_arc = "0.1.1"

selectors = { version = "0.24", path = "../lewp-selectors", package = "lewp-selectors" }
indexmap = "1.9.2"

[build-dependencies]
phf_codegen = "0.11.1"
