[package]
name = "lewp-dom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcdom = { version = "0.1", package = "markup5ever_rcdom", path = "../../html5ever/rcdom", features = ["typed"] }
html5ever = { version = "0.25", path = "../../html5ever/html5ever" }
#html5ever = "0.25"
langtag = "0.2"
log = "0.4"

[dev-dependencies]
simplelog = "0.11"
