[package]
name = "lewp-selectors"
version = "0.24.0"
authors = ["The Servo Project Developers", "Lewin Probst <info@emirror.de>"]
documentation = "https://docs.rs/lewp-selectors/"
description = "CSS Selectors matching for Rust - version used by lewp"
repository = "https://github.com/emirror-de/lewp-rs"
readme = "README.md"
keywords = ["css", "selectors"]
license = "MPL-2.0"
build = "build.rs"

[lib]
name = "lewp_selectors"
path = "lib.rs"

[features]
bench = []

[dependencies]
bitflags = "1.3"
cssparser = "0.29"
derive_more = "0.99"
fxhash = "0.2"
log = "0.4"
phf = "0.11"
precomputed-hash = "0.1"
servo_arc =  "0.1"
smallvec = "1.10"

[build-dependencies]
phf_codegen = "0.11"
