[package]
name = "lewp"
version = "0.4.0-dev"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Server-side HTML5 website rendering library written in Rust.
Empowering you to always create valid, technically optimized code without templates and
mixed languages.
"""
homepage = "https://github.com/emirror-de/lewp-rs"
documentation = "https://docs.rs/lewp"
repository = "https://github.com/emirror-de/lewp-rs"
readme = "README.md"
keywords = ["HTML5", "CSS", "JavaScript", "WASM", "modules"]
categories = ["web-programming"]

[dependencies]
lewp-css = { version = "0.2", path = "../lewp-css" }
lewp-html = { version = "0.3.0-dev", path = "../lewp-html" }
selectors = { version = "0.24", path = "../lewp-selectors", package = "lewp-selectors" }
serde = { version = "^1.0.152", features = ["derive"], optional = true }
langtag = "^0.2.0"
log = "^0.4.17"
html5ever = "0.26"
markup5ever_rcdom = { version = "0.2" }
charsets = "^0.2.0"
walkdir = "^2.3.2"
pathdiff = "^0.2.1"
glob = "0.3.1"

[dev-dependencies]
rand = "0.8.5"
tempfile = "^3.3.0"
fs_extra = "^1.2.0"
