[package]
name = "lewp"
version = "0.4.0-dev"
authors = ["Lewin Probst <info@emirror.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Modular library to generate and render technically optimized and always valid
HTML5 websites with ease. Provides management of different resource types like
images required for your website.
"""
homepage = "https://github.com/emirror-de/lewp-rs"
documentation = "https://docs.rs/lewp"
repository = "https://github.com/emirror-de/lewp-rs"
readme = "README.md"
keywords = ["HTML5", "CSS", "JavaScript", "WASM", "modules"]
categories = ["web-programming"]

[dependencies]
anyhow = "1"
lewp-css = { version = "0.2", path = "../lewp-css" }
lewp-html = { version = "0.3.0-dev", path = "../lewp-html" }
selectors = { version = "0.24", path = "../lewp-selectors", package = "lewp-selectors" }
langtag = "^0.3.2"
log = "^0.4.17"
html5ever = "0.26"
markup5ever_rcdom = { version = "0.2" }
minify-js = "0.4.2"
mime = "0.3.16"
charsets = "^0.2.0"
walkdir = "^2.3.2"
pathdiff = "^0.2.1"
rust-embed = "6.4.2"
glob = "0.3.1"

[dev-dependencies]
rand = "0.8.5"
tempfile = "^3.3.0"
fs_extra = "^1.2.0"
simple_logger = "4.0.0"
axum = "0.6"

[badges]
maintenance = { status = "actively-developed"}
